<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textureblackboard"
    tools:context=".ui.OperationSelector">

    <ImageView
        android:id="@+id/sum"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toTopOf="@+id/multiply"
        app:layout_constraintEnd_toEndOf="@+id/multiply"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toStartOf="@+id/multiply"></ImageView>


    <TextView


        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:gravity="left"
        android:text="@string/sum"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/sum"
        app:layout_constraintStart_toStartOf="@+id/sum"
        app:layout_constraintTop_toBottomOf="@+id/sum" />


    <ImageView
        android:id="@+id/div"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/division"
        app:layout_constraintBottom_toTopOf="@+id/rest"
        app:layout_constraintEnd_toEndOf="@+id/rest"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rest"></ImageView>

    <TextView


        android:id="@+id/txt_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:gravity="left"
        android:text="@string/division"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/div"
        app:layout_constraintStart_toStartOf="@+id/div"
        app:layout_constraintTop_toBottomOf="@+id/div" />

    <ImageView
        android:id="@+id/rest"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_baseline_remove_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.781"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"></ImageView>

    <TextView


        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="left"

        android:text="@string/rest"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/rest"
        app:layout_constraintStart_toStartOf="@+id/rest"
        app:layout_constraintTop_toBottomOf="@+id/rest" />

    <ImageView
        android:id="@+id/multiply"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_baseline_close_24"
        app:layout_constraintEnd_toStartOf="@+id/rest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="20dp"></ImageView>

    <TextView


        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"

        android:gravity="left"
        android:text="@string/multiply"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/multiply"
        app:layout_constraintStart_toStartOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/ic_baseline_person_pin_24"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiply"></ImageView>

    <TextView

        android:id="@+id/txt_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="left"

        android:text="@string/profile"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/img_profile"
        app:layout_constraintStart_toStartOf="@+id/img_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_profile" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="347dp" />


</androidx.constraintlayout.widget.ConstraintLayout>